[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orgkernel"
version = "1.0.0"
description = "Enterprise trust layer for AI agents — cryptographic identity, scoped execution, tamper-evident audit."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    { name = "Metaprise", email = "lab@metaprise.ai" },
]
maintainers = [
    { name = "Metaprise", email = "lab@metaprise.ai" },
]
keywords = [
    "ai-agent",
    "enterprise",
    "trust-layer",
    "cryptographic-identity",
    "audit",
    "pki",
    "ed25519",
    "fastapi",
    "sqlalchemy",
    "compliance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "cryptography>=41.0",
    "fastapi>=0.109",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]
postgres = [
    "asyncpg>=0.29",
    "alembic>=1.13",
]
mysql = [
    "aiomysql>=0.2",
    "alembic>=1.13",
]
sqlite = [
    "aiosqlite>=0.20",
]
all-db = [
    "asyncpg>=0.29",
    "aiomysql>=0.2",
    "aiosqlite>=0.20",
    "alembic>=1.13",
]

[project.urls]
Homepage = "https://github.com/metaprise/orgkernel"
Documentation = "https://github.com/metaprise/orgkernel#readme"
Repository = "https://github.com/metaprise/orgkernel"
Issues = "https://github.com/metaprise/orgkernel/issues"
Changelog = "https://github.com/metaprise/orgkernel/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/orgkernel"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
